--- a/package.json
+++ b/package.json
@@ -37,7 +37,10 @@
     ]
   },
   "devDependencies": {
+    "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-jest": "^23.13.1",
-    "json-server": "^0.16.1"
+    "eslint-plugin-prettier": "^3.1.3",
+    "json-server": "^0.16.1",
+    "prettier": "^2.0.5"
   }
 }
