--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "devDependencies": {
     "cypress": "^4.8.0",
     "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-cypress": "^2.11.1",
     "eslint-plugin-jest": "^23.13.1",
     "eslint-plugin-prettier": "^3.1.3",
     "json-server": "^0.16.1",
